# skew

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  skew_nvda.py  test_backend.rs
.github/workflows/: deploy.yml  pages.yml
docs/: index.md  whatisskewinmath.md
scripts/: tauri-dev-ubuntu.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
