[package]
name = "kafka-mini-one"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
urlencoding = "2.1"

[build-dependencies]
tauri-build = { version = "2" }
