[package]
name = "kafka-mini-one"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.5"
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
urlencoding = "2.1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
lru = "0.12"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
